# teapot-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: error.rs  lib.rs  result.rs
src/edge/: basic_edge.rs  directed_edge.rs  mod.rs
src/graph/: directed_graph.rs  mod.rs  union_find_tree.rs
src/node/: basic_node.rs  metadata_node.rs  mod.rs  node_index.rs
tests/: test_directed_graph_gml_write.gml  test_directed_graph_gml_write.minimal.gml  test_directed_graph_xxx_write.gml  test_directed_graph_xxx_write.minimal.dot
