[package]
name = "teapot"
description = "A simple graph library"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["graph", "no_std"]

[features]
default = ["std"]
std = ["difference", "log", "env_logger"]
metrics = []

[dependencies]

### HashMap
hashbrown = "0.9" # This version compatible with Intel Pin
#hashbrown = { version="0.9", default-features = false, features = ["ahash"] } # This version compatible with Intel Pin

### Traits
acid_io = { git = "https://github.com/K-atc/acid_io.git", version = "0.1.0", default-features = false, features = ["alloc", "byteorder"] }

### Logging
log = { version = "0.4.17", optional = true }
env_logger = { version = "0.9.0", optional = true }

### Test support
difference = { version = "2.0", optional = true }

[dev-dependencies]
cargo-husky = { version = "1", features = ["precommit-hook", "run-cargo-fmt"] }
